# Misaka-Cipher

./: .env.example  .gitignore  ASSET_LICENSE  CHANGELOG.md  CONTRIBUTING.md  Copilot_Plan.md  Final_Plan.md  Final_Plan_Antigravity.md  Final_Plan_Claude.md  Final_Plan_Copilot.md  Final_Plan_Finalize.md  LICENSE  MAINTAINERS.md  MisakaCipher.bat  README.md  SECURITY.md  Setup.bat  Start_Aethvion.bat  Start_AethvionDev.bat  Start_AethvionWeb.bat  Start_Aethvion_Suite.bat  Start_Misaka_Cipher.bat  cli.py  debloat.md  main.py  nexus_core.py  orig_app.js  pyproject.toml  requirements-memory.txt  requirements.txt  server_log.txt  setup.py  test_factory.py  test_forge.py  test_integration.py  test_memory.py  tmp_app_backup.js
.github/: CONTRIBUTING.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: python-checks.yml
apps/audio/: Start_Audio.bat  audio_core.py  audio_server.py
apps/code/: Start_Code.bat  code_server.py
apps/driveinfo/: Start_DriveInfo.bat  __init__.py  driveinfo_core.py  driveinfo_server.py
apps/finance/: Start_Finance.bat  finance_server.py
apps/hardwareinfo/: Start_HardwareInfo.bat  hardware_server.py
apps/image/: Start_Image.bat  image_server.py
apps/kanban/: Start_Kanban.bat  kanban_server.py
apps/linkmap/: Start_LinkMap.bat  linkmap_server.py
apps/overlay/: main.py
apps/photo/: Start_Photo.bat  photo_server.py
apps/specter/: Start_Specter.bat  specter_server.py
apps/synapse/: README.md  Start_Synapse.bat  __init__.py  bridge.py
apps/tracking/: README.md  osf_manager.py  synapse_core.py  synapse_server.py  tracking_server.py
apps/vtuber/: README.md  auto_rigger.py  vtuber_server.py
cli/: factory_module.py  forge_module.py  memory_module.py  nexus_module.py  system_module.py  utils.py
cli_modules/: __init__.py  arena_module.py  factory_module.py  memory_module.py  nexus_module.py  research_module.py  settings_module.py  system_module.py
config/: aethvion.yaml  memory.yaml  model_registry.json  providers.yaml  security.yaml  settings.json  settings_manager.py  suggested_models.json
core/: aether_core.py  cli.py  launcher.py  main.py  nexus_core.py  system_retrieval.py  version.py
core/bridges/: bridge_manager.py  registry.json  screen_capture.py  spotify_bridge.py  weather_bridge.py  webcam_capture.py
core/companions/: __init__.py  companion_creator_routes.py  companion_engine.py  companion_routes.py  registry.py
core/config/: aethvion.yaml  (+7 more)
data/: usage_log.json
documentation/: README.md
factory/: agent_factory.py  agent_registry.py  agent_spec.py  agent_templates.py  base_agent.py  generic_agent.py
forge/: __init__.py  code_generator.py  tool_forge.py  tool_registry.py  tool_spec.py  tool_validator.py
memory/: __init__.py  episodic_memory.py  knowledge_graph.py  memory_spec.py  summarization.py
orchestrator/: __init__.py  intent_analyzer.py  master_orchestrator.py  output_validator.py  task_models.py  task_queue.py
providers/: base_provider.py  google_provider.py  grok_provider.py  openai_provider.py  provider_manager.py
security/: __init__.py  firewall.py  router.py  scanner.py
setup/: fix_localllama_nvidia.bat  setup_directories.bat  setup_environment.bat
tests/: debug_memory_full.py  debug_memory_retrieval.py  debug_thread_flow.py  fix_missing_memory.py  remove_manual_fix.py  repro_full_persistence.py  repro_history_loading.py  repro_persistence.py  repro_save.py  repro_task_persistence.py  run_model_selection_test.py  simulate_api.py  test_factory.py  test_memory.py  test_memory_pruning.py  test_model_selection.py
tools/: register_standard_tools.py  registry.json
utils/: trace_manager.py  validators.py
web/: __init__.py  advanced_aiconv_routes.py  arena_routes.py  assistant_routes.py  memory_routes.py  package_routes.py  registry_routes.py  server.py  task_routes.py  tool_routes.py  usage_routes.py
workers/: __init__.py  package_installer.py
workspace/: __init__.py  package_intelligence.py  package_manager.py  packages.json  preferences_manager.py  usage_tracker.py  user_preferences.json  workspace_manager.py
(+412 files in other folders)
